navigation alignment and bugs

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,7 +47,7 @@ body {
 .nav-menu {
   top: 0;
   position: relative;
-  z-index: 24;
+  z-index: 24;  
 }
 nav {
   height: 80px;
@@ -408,6 +408,16 @@ nav {
     left: 0;
     width: 50%;
   }
+  &::before{
+    display: block;
+    content: "";
+    position: fixed;
+    background:#fff;
+    top: 0px;
+    height: 110px;
+    width: 100%;
+    z-index: 99;
+  }
 }
 #productmenu {
   position: absolute;
@@ -439,11 +449,40 @@ nav {
   }
 }
 .product-menu-btn {
-  width: 100%;
+  width: fit-content;
   transition: 0.15s;
+  position: relative;  
   &:hover {
-    color: var(--c-grey) !important;
-    background-color: var(--c-light-grey);
+    color: var(--c-grey) !important;    
+    &::before{
+      opacity: 1;
+      animation: slide1 0.2s ease-in-out forwards;      
+    }
+  }    
+  &:before{    
+    position:absolute;
+    display:block;
+    opacity: 0;
+    content:"";
+    color:#000;
+    width: 8px;
+    height: 8px;
+    border-bottom:solid 2px;
+    border-right:solid 2px;
+    top:50%;
+    right: 0;    
+  }
+}
+
+@keyframes slide1 {
+  0%{
+    transform: translate(0, 0) rotate(-45deg);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(20px, 0) rotate(-45deg);
+    opacity: 1;
   }
 }
 
@@ -527,6 +566,7 @@ body::-webkit-scrollbar-button {
 }
 
 /* Navigation */
+.product-menu-btn:hover .nav-line,
 .nav-link:hover .nav-line,
 .nav-link.active .nav-line {
   width: 100%;
